--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 15 points<br>
+Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 19 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
@@ -23,17 +24,17 @@ Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 Git commands sorted by usage:
 <pre style="text-align: left">
      62 clone
-     44 status
-     39 symbolic-ref
-     39 branch
-      6 add
+     57 status
+     52 symbolic-ref
+     52 branch
+      8 add
       5 ignore
-      4 help
-      4 commit
+      5 help
+      5 commit
+      3 rev-parse
       3 push
       3 config
       2 pull
-      1 rev-parse
       1 checkout
 </pre>
 <script type="text/javascript">
